--- a/package.json
+++ b/package.json
@@ -9,16 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material/web": "^1.2.0",
+    "@vercel/kv": "^1.0.1",
+    "cookies-next": "^4.1.1",
+    "firebase": "^10.6.0",
+    "firebase-admin": "^12.0.0",
+    "iron-session": "^8.0.1",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "server-only": "^0.0.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8.4.35",
+    "sass": "^1.71.0",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
