--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@material/web": "^1.2.0",
+    "@vercel/kv": "^1.0.1",
     "cookies-next": "^4.1.1",
     "firebase": "^10.6.0",
     "firebase-admin": "^12.0.0",
-    "next": "^14.1.4",
-    "next-absolute-url": "^1.2.2",
+    "iron-session": "^8.0.1",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
     "server-only": "^0.0.1",
